# nobody

./: .gitignore  Cargo.toml  auto.moto  bkp.moto  build.bat  build.rs  bump.ps1  emplist.xlsx  example.js  flutter_rust_bridge.yaml  grammar.pest  nobody.h  nobody.sln  publish.ps1  pubspec.yaml  test.js  test.moto  test.no
.github/workflows/: release.yml
.nothing/passwords/: sap.amohandas
codegen/: LICENSE  build.yaml  pubspec.yaml
codegen/lib/: builder.dart  codegen.dart
console/: Ask.cs  Class1.cs  NobodyConsole.cs  Pigments.cs  Show.cs  ShowTests.cs  console.csproj
core/: AnyLogger.cs  AnyPlugin.cs  Anybody.cs  Ask.cs  Ctx.cs  Nobody.cs  NobodyConsole.cs  Pigments.cs  RunnableAttribute.cs  SetCtxExt.cs  Show.cs  StringExtAsk.cs  StringExtCtx.cs  core.csproj
echo/: NoTestBrowser.cs  Program.cs  SimpleTest.cs  TestRunner.cs  echo.csproj
grammar/: note.g4  noteBaseListener.java  noteBaseVisitor.java  noteLexer.java  noteListener.java  noteParser.java  noteVisitor.java
grammar/.antlr/: note.interp  noteBaseListener.java  noteLexer.interp  noteLexer.java  noteLexer.tokens  noteListener.java  noteParser.java
here/: Program.cs  TestClass.cs  here.csproj  install.ps1  record.ps1
lib/src/: src.dart
modules/: README.md  bun.lockb  index.ts  package.json  runtime.js
nobody/: .gitignore  EMP.xlsx  EMR.xlsx  PURCHASE REQUESTS.xlsx  export.xlsx  pubspec.yaml
nobody/lib/: authable.dart  cell.future.dart  downloadable.dart  graph.dart  graph.future.dart  graph_query.dart  input.dart  input.future.dart  lib.dart  nobody.dart  online.dart  (+14 more)
nomo/: Cargo.toml
notest/: Program.cs  notest.csproj
nothing/: INothing.cs  Nowhere.cs  nothing.csproj
nowhere/: Credentials.cs  INothing.cs  Nowhere.cs  nowhere.csproj
office/: Class1.cs  Office.cs  TokenCacheHelper.cs  TokenProvider.cs  office.csproj
online/: Online.cs  OnlineExt.cs  StringExtCtx.cs  online.csproj
playground/: UnitTest1.cs
rust/: Cargo.toml
rust/src/: console.rs  error.rs  frb_generated.io.rs  frb_generated.rs  frb_generated.web.rs  lib.rs
rust/src/api/: mod.rs  online.rs  simple.rs
scripts/: play.no
src/: c.rs  constants.rs  lib.rs  main.rs  module_loader.rs  noui.rs  progress.rs  runtime.js  runtime.rs  script.rs  show.rs  tui.rs
termo/: pubspec.yaml  termo.cs  termo.csproj
tests/: one.js  package-lock.json  package.json
working/: ExTime.cs  Input.cs  Nobody.cs  Online.cs  SapWebUi.cs  Transaction.cs  termo.cs  working.csproj
(+71 files in other folders)
