[package]
name = "nobody"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.29"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
termo = "0.16.0"
tokio = { version = "1.34.0", features = ["full"] }
tungstenite = "0.20.1"
lazy_static = "1.4"
#antlr-rust = {path = "C:\\repo\\antlr4\\runtime\\Rust"}
antlr-rust = "0.3.0-beta"