[package]
name = "nobody"
version = "0.3.0"
edition = "2021"



[dependencies]
crossterm = "0.27.0"
indicatif = "0.17.7"
nom = "7.1.3"
rand = "0.8.5"
reqwest = { version = "0.11.23", features = ["blocking"] }
zip = "0.6.6"
minimo = "0.3.4"
walkdir = "2.4.0"
dirs = "5.0.1"
kdam = { version = "0.5.1", features = ["gradient", "rich", "spinner", "template"] }
tokio = { version = "1.36.0", features = ["full"] }


[[bin]]
name = "no"
path = "src/main.rs"


