[package]
name = "nobody"
version = "0.4.6"
edition = "2021"



[dependencies]
crossterm = "0.27.0"
indicatif = "0.17.7"
nom = "7.1.3"
rand = "0.8.5"
reqwest = { version = "0.12.5", features = ["blocking", "json"] }
zip = "2.1.3"
minimo = { version = "0.4.3", features = ["async"] }
walkdir = "2.4.0"
dirs = "5.0.1"
kdam = { version = "0.5.1", features = ["gradient", "rich", "spinner", "template"] }
tokio = { version = "1.36.0", features = ["full"] }
deno_core = "0.291.0"
deno_ast = { version = "0.39.2", features = ["transpiling"] }
serde_json = "1.0.118"
regex = "1.10.5"
once_cell = "1.19.0"


[[bin]]
name = "no"
path = "src/main.rs"


[build-dependencies]
deno_core = "0.291.0"



    



