[package]
name = "nobody"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
flutter_rust_bridge = "=2.0.0-dev.3"
rand = "0.8.5"
anyhow = "1.0.76"
thirtyfour = { version = "0.31.0"}
futures-timer = "3.0.2"
serde_json = "1.0.107"
serde = { version = "1.0.188", features = ["derive"] }
regex = "1.9.6"
url = "2.4.1"
async-trait = "0.1.73"
async-recursion = "1.0.5"
tokio = { version = "1.32.0", features = ["full"] }
lazy_static = "1.4.0"
reqwest = "0.11.22"
calamine = { version = "0.23.1", features = ["chrono", "dates"] }
textwrap = "0.16.0"
chrono = "0.4.31"
dirs = "5.0.1"
aes = "0.8.3"
base64 = "0.21.4"
zip = "0.6.6"
winreg = "0.52.0"
